Add Chopping Block enhancements with tool modes and target voxel visualization

--- a/TreeSplitting/TreeSplitting.csproj
+++ b/TreeSplitting/TreeSplitting.csproj
@@ -13,6 +13,13 @@
             <Private>false</Private>
         </Reference>
     </ItemGroup>
+    
+    <ItemGroup>
+        <Reference Include="protobuf-net">
+            <HintPath>$(VINTAGE_STORY)/lib/protobuf-net.dll</HintPath>
+            <Private>false</Private>
+        </Reference>
+    </ItemGroup>
 
     <ItemGroup>
         <Content Include="modinfo.json">
