--- a/TreeSplitting/TreeSplitting.csproj
+++ b/TreeSplitting/TreeSplitting.csproj
@@ -41,4 +41,9 @@
         </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
+
 </Project>
