--- a/TreeSplitting/TreeSplitting.csproj
+++ b/TreeSplitting/TreeSplitting.csproj
@@ -9,22 +9,26 @@
 
     <ItemGroup>
         <Reference Include="cairo-sharp">
-          <HintPath>C:\Users\Mikkel\AppData\Roaming\Vintagestory\Lib\cairo-sharp.dll</HintPath>
+          <HintPath>$(VINTAGE_STORY)\Lib\cairo-sharp.dll</HintPath>
         </Reference>
         <Reference Include="VintagestoryAPI">
-            <HintPath>$(VINTAGE_STORY)/VintagestoryAPI.dll</HintPath>
+            <HintPath>$(VINTAGE_STORY)\VintagestoryAPI.dll</HintPath>
             <Private>false</Private>
         </Reference>
         <Reference Include="VSSurvivalMod">
-            <HintPath>$(VINTAGE_STORY)/Mods/VSSurvivalMod.dll</HintPath>      
+            <HintPath>$(VINTAGE_STORY)\Mods\VSSurvivalMod.dll</HintPath>      
             <Private>false</Private>
         </Reference>
+        <Reference Include="VSEssentials">
+            <HintPath>$(VINTAGE_STORY)\Mods\VSEssentials.dll</HintPath>
+            <Private>False</Private>
+        </Reference>
         <Reference Include="protobuf-net">
-            <HintPath>$(VINTAGE_STORY)/lib/protobuf-net.dll</HintPath>
+            <HintPath>$(VINTAGE_STORY)\Lib\protobuf-net.dll</HintPath>
             <Private>false</Private>
         </Reference>
         <Reference Include="harmony">
-            <HintPath>$(VINTAGE_STORY)/lib/0Harmony.dll</HintPath>
+            <HintPath>$(VINTAGE_STORY)\Lib\0Harmony.dll</HintPath>
             <Private>false</Private>
         </Reference>
     </ItemGroup>
